1.4.0i2:
    Core & Setup:
    * 3648 FIX: Fixed log file parsing of host states...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
    * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
    * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
    * 3909 FIX: postfix_mailq: fixed readout postfix config
    * 3748 FIX: vertias_vcs: Fix empty agent section for standard xinetd configuration...

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3906 oracle: now version, database creation and startup time, log and open mode, logins, flashback are inventorised
    * 3944 Added OS related information for Cisco, Fireeye and Infoblox devices...
    * 3908 winperf_if, lnx_if: new inventory plugins for switch port statistics of linux and windows hosts


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...
    * 3114 linux and windows agent can now be configured to directly encrypt their output. For real-time updates encryption is now optional (but active per default)...
    * 3531 Reduced Check_MK helper size for certain dists/python versions...
    * 3580 The macro $HOSTNAME$ is now available for host checks which are based on service states
    * 3155 implemented dual monitoring for systems with management boards (like HP iLO)
    * 3721 Host macros are now replaced in datasource program command lines...
    * 3853 cmk --list-tag can now also list offline hosts