@@ -1,0 +1,9 @@
+Title: if: each operational state can now be mapped to a check state
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i2
+Date: 1475826564
+Class: feature
+
+
