@@ -5,6 +5,7 @@
     Checks & Agents:
     * 3841 cups_queues: thresholds are now configurable in WATO...
     * 3910 oracle_instance: noarchivelog can now be ignored
+    * 3911 if: each operational state can now be mapped to a check state
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
     * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
     * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
